# PAOO

tema1/: CMakeLists.txt  cmake.sh
tema1/include/: SoundBuffer.h
tema1/src/: SoundBuffer.cpp  main.cpp
tema2/: CMakeLists.txt  cmake.sh  main.cpp
tema3/: CMakeLists.txt  cmake.sh
tema3/src/: main.cpp
